--- a/docs/01_introduction_and_goals.adoc
+++ b/docs/01_introduction_and_goals.adoc
@@ -1,12 +1,7 @@
 [[section-introduction-and-goals]]
 == Introducción y objetivos
 
-En este punto se desrrollarán los requisitos y los temas más importantes a tener en cuenta:
-
-* Objetivos comerciales, características esenciales de la aplicación y requisitos funcionales para el sistema
-* Objetivos de calidad
-* Stakeholders (partes interesadas y expectativas)
-
+El objetivo final del proyecto es desarrollar una tienda online, en este caso venderemos juguetes.
 
 === Descripción general de los requisitos, características esenciales y objetivos comerciales
 
@@ -18,7 +13,7 @@ Los requisitos más importantes son:
 * Se calcularán los costes de envío consultando la dirección del usuario en su POD (calculando los costes en función de la distnacia del centro de distribución a la dirección del usuario). Este cálculo se llevará a cabo una vez el cliente haya seleccionado los productos a comprar.
 * Se mostrarán los costes finales de los productos a comprar por un cliente. Una vez el cliente decida comprarlos, se registrará la venta como realizada y se pasará a su envío.
 * Los clientes podrán en todo momento ver sus pedidos realizados.
-* El desarrollo de la aplicación será mediante React y TypeScript
+* El desarrollo de la aplicación será mediante React y TypeScript para el Front-end y Node.js y Express para el Back-end.
 * La aplicación deberá ser accesible y estar desplegada usando un sistema de integración continua. La tecnología de despliegue se especificará en el punto 4.
 
 La tienda online desarrollada se encargará de vender juguetes infantiles.
@@ -31,26 +26,16 @@ La tienda online desarrollada se encargará de vender juguetes infantiles.
 === Objetivos de calidad
 
 
-Los cinco objetivos de calidad para la arquitectura que hemos decido seguir (basandonos en nuestras capacidades y los requisitos de la aplicación) son los siguientes. Junto con ellos se muestra una breve descripción de lo que pretendemos conseguir con cada uno de ellos:
+Los cinco objetivos de calidad para la arquitectura que hemos decido seguir (basandonos en nuestras capacidades y los requisitos de la aplicación) son los siguientes. Junto con ellos se muestra una breve descripción de lo que pretendemos conseguir con cada uno de ellos y la prioridad que le damos:
 
-- Usabilidad: el sistema deberá ser fácil de usar y no requerir de conocimientos específicos o complejos para poder realizar compras. Se debería poder añadir a un encargo, comprar y ver pedidos realizados sin mayor complicación.
-- Comprensibilidad: el sistema deberá ser fácil de entender por los usuarios, en todo momento deben saber cómo funciona la aplicación con poco esfuerzo. Los elementos gráficos ayudarán a la Comprensibilidad.
-- Seguridad: el sistema deberá ser seguro en cuanto a los datos personales de cada usuario y también en lo que se refiere a la navegabilidad por la aplicación.
-- Atractivo: el sistema tendrá una interfaz atractiva, es decir, la interfaz ayudará en aspectos como la usabilidad o Comprensibilidad y no entorpecerá el uso de la aplicación por parte de los usuarios.
-- Testabilidad: el sistema deberá ser testable para poder comprobar que el funcionamiento es el correcto. También influye en otros atributos de calidad como la seguridad.
-
-A continuación se muestra una tabla con objetivos de calidad y escenarios concretos, ordenados por prioridades.
-La prioridad de los escenarios viene dada por la importancia para el cliente y por la dificultad de desarrollo por los arquitectos, tiene 3 valores (Bajo, Medio, Alto)
-
-
-[options="header",cols="1,2,2,2"]
+[options="header",cols="1,2,2"]
 |===
-|Ref|Objetivo de calidad|Escenario|Prioridad (Cliente/Arquitecto)
-| _1_ | _Usabilidad_ | _Las opciones de añadir al carrito un producto, comprar y ver pedidos realizados deben estar muy claras y fácilmente accesibles_ | _Alto/Bajo_
-| _2_ | _Comprensibilidad_ | _En caso de tener funciones distintas a las habituales de una tienda online, se deberán explicar y mostrar de manera clara_ | _Alto/Medio_
-| _3_ | _Seguridad_ | _Si en cualquier momento la aplicación no es segura (por ejemplo debido a malware) se deberá mostrar un mensaje de que no es seguro el uso del sistema o incluso incapacitar el sistema hasta que se resuelva_ | _Alto/Alto_
-| _4_ | _Testabilidad_ | _Si se da el caso de que se necesite añadir nuevas funcionalidades a la tienda online, se deberá poder probar antes de su despliegue_ | _Medio/Medio_
-| _5_ | _Atractivo_ | _Si la tienda incorpora opciones inusuales en tiendas online, se deberá usar la interfaz para que sean fácilmente usables y accesibles_ | _Medio/Bajo_
+|Prioridad|Objetivo de calidad|Descripción del objetivo
+| _1_ | _Usabilidad_ | _El sistema deberá ser fácil de usar y no requerir de conocimientos específicos o complejos para poder realizar compras. Se debería poder añadir a un encargo, comprar y ver pedidos realizados sin mayor complicación._
+| _2_ | _Comprensibilidad_ | _El sistema deberá ser fácil de entender por los usuarios, en todo momento deben saber cómo funciona la aplicación con poco esfuerzo. Los elementos gráficos ayudarán a la Comprensibilidad._
+| _3_ | _Seguridad_ | _El sistema deberá ser seguro en cuanto a los datos personales de cada usuario y también en lo que se refiere a la navegabilidad por la aplicación._
+| _4_ | _Testabilidad_ | _El sistema deberá ser testable para poder comprobar que el funcionamiento es el correcto. También influye en otros atributos de calidad como la seguridad._
+| _5_ | _Atractivo_ | _El sistema tendrá una interfaz atractiva, es decir, la interfaz ayudará en aspectos como la usabilidad o comprensibilidad y no entorpecerá el uso de la aplicación por parte de los usuarios._
 |===
 
 
@@ -64,6 +49,7 @@ Las partes interesadas en el sistema serán:
 | _Arquitectos del software_ | _Mario Lada Martínez, Alejandro Galán Freire, Aarón García García, Rafael Muñiz Reguera y Jorge López Peláez._ | _Deben conocer la arquitectura y trabajar en ella, además, deberán tomar decisiones importantes._
 | _Desarrolladores_ | _En este caso coinciden con los arquitectos del software._ | _Deberán desarrollar el código de la aplicación. Necesitarán la documentación para orientarse en algunos aspectos._
 | _Cliente_ | _La empresa de venta de productos que nos contrata para crear el sistema de venta online. En este caso se corresponde con el conjunto de profesores de la asignatura._ | _Deberán dar los requisitos funcionales más importantes para el desarrollo de la aplicación y un conjunto de restricciones. Además, esperan una aplicación que cumpla con los objetivos._
+| _Administrador BD_ | _Es el que nos asministra la base de datos._ | _Espera que el trabajo con la base de datos sea lo más fácil posible._
 | _Compradores_ | _Son los usuarios finales que utilizarán el servicio de compra online._ | _Esperan como mínimo que la aplicación sea fácil de usar y de comprender._
 |===
 
