--- a/docs/12_glossary.adoc
+++ b/docs/12_glossary.adoc
@@ -25,7 +25,9 @@ Potentially more columns in case you need translations.
 
 [options="header"]
 |===
-| Term         | Definition
-| <Term-1>     | <definition-1>
-| <Term-2>     | <definition-2>
+| Término         | Definición
+| _SOLID_     | _SOLID es una especificación que permite a las personas almacenar sus datos de forma segura en almacenes de datos descentralizados llamados PODs._
+| _POD_    | _Los PODs son como servidores web personales seguros para datos. Cuando los datos se almacenan en el POD de alguien, controlan qué personas y aplicaciones pueden acceder a ellos._
+| _REACT_    | _React es una biblioteca de JavaScript para construir interfaces de usuario interactivas. Además, se encarga de actualizar y renderizar de manera eficiente los componentes correctos cuando los datos cambien._
+| _NODE.js_    | _Node.js es un entorno de tiempo de ejecución de JavaScript. Incluye todo lo que se necesita para ejecutar un programa escrito en JavaScript. También aporta muchos beneficios y soluciona gran cantidad de problemas._
 |===
