--- a/docs/06_runtime_view.adoc
+++ b/docs/06_runtime_view.adoc
@@ -26,16 +26,9 @@ There are many notations for describing scenarios, e.g.
 * sequence diagrams
 * BPMN or EPCs (event process chains)
 * state machines
+
+
 * ...
-
-****
-
-=== <Runtime Scenario 1>
-
-
-* _<insert runtime diagram or textual description of the scenario>_
-* _<insert description of the notable aspects of the interactions between the
-building block instances depicted in this diagram.>_
 
 It is possible to use a sequence diagram:
 
@@ -50,7 +43,16 @@ Alice  --> Pod: Store route
 Alice -> Bob: Another authentication Request
 Alice <-- Bob: another authentication Response
 ----
-=== <Runtime Scenario 2>
+
+****
+
+=== <Diagrama de secuencia 1>
+
+=== <Diagrama de secuencia 2>
+
+=== ...
+
+=== <Diagrama de secuencia n>
 
 === ...
 
