--- a/docs/06_runtime_view.adoc
+++ b/docs/06_runtime_view.adoc
@@ -63,7 +63,17 @@ Usuario <-- DeDe: Muestra el precio y la dirección.
 Usuario -> DeDe: Confirma el pedido.
 ----
 
-=== <Diagrama de secuencia 2>
+=== Añadir productos
+[plantuml,"Sequence diagram",png]
+----
+actor Admin
+database BaseDeDatos as "Base de datos" #blue
+Admin -> Dede: Accede  a la página para añadir productos
+Admin -> Dede: Rellena la pagina
+Dede -> BaseDeDatos: Añade el nuevo producto
+BaseDeDatos -> Dede: Devuelve la nueva lista de productos
+Dede -> Admin: Muestra todos los productos
+----
 
 === ...
 
