enrutamiento dinamico finalizado y documentacion pt 6 eliminar productos

--- a/docs/06_runtime_view.adoc
+++ b/docs/06_runtime_view.adoc
@@ -75,6 +75,18 @@ BaseDeDatos -> Dede: Devuelve la nueva lista de productos
 Dede -> Admin: Muestra todos los productos
 ----
 
+=== Eliminar productos
+[plantuml,"Sequence diagram",png]
+----
+actor Admin
+database BaseDeDatos as "Base de datos" #blue
+Admin -> Dede: Accede  a la página para eliminar productos
+Admin -> Dede: Escoge el producto a eliminar
+Dede -> BaseDeDatos: Elimina el producto
+BaseDeDatos -> Dede: Devuelve la lista actualizada de productos
+Dede -> Admin: Muestra todos los productos
+----
+
 === ...
 
 === <Diagrama de secuencia n>
