--- a/docs/06_runtime_view.adoc
+++ b/docs/06_runtime_view.adoc
@@ -75,7 +75,15 @@ BaseDeDatos -> Dede: Devuelve la nueva lista de productos
 Dede -> Admin: Muestra todos los productos
 ----
 
-
+=== Filtrar productos
+[plantuml,"Sequence diagram",png]
+----
+actor Usuario
+database BaseDeDatos as "Base de datos" #blue
+Usuario -> Dede: Escribe un texto en el cuadro de búsqueda y pulsa 'filtrar'
+BaseDeDatos --> Dede: Devuelve los juguetes que coincidan con la búsqueda
+Usuario <- Dede: Muestra los juguetes con el filtro
+----
 
 === <Diagrama de secuencia n>
 
