--- a/docs/06_runtime_view.adoc
+++ b/docs/06_runtime_view.adoc
@@ -82,7 +82,7 @@ actor Usuario
 database BaseDeDatos as "Base de datos" #blue
 Usuario -> Dede: Escribe un texto en el cuadro de búsqueda y pulsa 'filtrar'
 BaseDeDatos --> Dede: Devuelve los juguetes que coincidan con la búsqueda
-Usuario <- Dede: Muestra los juguetes con el filtro
+Usuario <- Dede: Muestra los juguetes encontrados con el filtro
 ----
 
 === <Diagrama de secuencia n>
