--- a/docs/06_runtime_view.adoc
+++ b/docs/06_runtime_view.adoc
@@ -97,5 +97,16 @@ BaseDeDatos --> Dede: Devuelve los juguetes que coincidan con la búsqueda
 Usuario <- Dede: Muestra los juguetes encontrados con el filtro
 ----
 
+=== Iniciar sesión
+[plantuml,"InicioSesion",png]
+----
+actor Usuario
+database BaseDeDatos as "Base de datos" #blue
+Usuario -> Dede: Accede a la página y presiona el botón de registro
+Usuario -> Dede: Rellena el formulario
+BaseDeDatos <-- Dede: Se almacena el usuario recién registrado como cliente
+Usuario <- Dede: Se muestra la página principal de la aplicación
+----
+
 
 
