Infraestructura vista de implementación
Infraestructura de nivel 1 para el punto 7 de la documentación

--- a/docs/07_deployment_view.adoc
+++ b/docs/07_deployment_view.adoc
@@ -35,6 +35,8 @@ when your infrastructure is more complex.
 ****
 
 === Infraestrutura Nivel 1
+image:infraestructura.png["Hierarchy of building blocks"]
+Este sería un diagrama que muestra la relación entre los distintos componentes de la aplicación.
 
 [role="arc42help"]
 ****
